
20090917: Fixed Config to load defaults if none found.

	  Preferences dialog saves window size properly now.

	  Fixed bug that did not update chart panel properly after preferences dialog has closed.

	  Applied patch (day + 3ma script - ID: 2860785). Thanks to Austin (x_curve) for the patch.

20090918: Fixed bar building function. Loads very quickly now.

	  Fixed bug that added an empty item in the recent charts list in the main toolbar.

20090920: Fixed bars to load editing bug.

          Recent charts list now updates when item is selected.

20090922: Changed DataBase chart functions to use a user editable SQL commands. The SQL commands are
	  found in the SQL page of the preferences dialog.

	  Added a SQL page to the preferences dialog to allow users to edit the chart commands to the DB.
	  This allows users to modify the SQL commands for user defined db's. NOTE: Do not change any
	  sub strings marked with a dollar sign eg. $symbol, $sd, $ed. These are place holders that
	  qtstalker will later replace with valid values on the fly.

	  Removed the table field and index table parms from the Quotes page.

	  Renamed the preferences dialog Quotes page to 'DB'.

20090924: Added rubberband method of selecting a chart area to zoom. Crosshairs and drawing mode must be off.
          Left double click, hold and drag the cursor to size the rubberband to select an area. Release the mouse
          button to complete the zoom. The chart will then move and zoom the area to fill the complete space
          available. The zoom in and zoom out toolbar buttons will update. To restore the chart, user may either
          press the zoom out button or press either bar spacing buttons to reset. Zooms are unlimited
          for each symbol. Once a new symbol is loaded, the zooms are cleared.

          Removed the bar spacing spinbox and the third bar spacing button.

          Added tooltips to the preferences dialog. Removed a few settings that may cause gui conflicts.

